formation/04-secure-ingress/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod1
  name: pod1
  namespace: default
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: pod1
