formation/04-secure-ingress/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod2
  name: pod2
  namespace: default
spec:
  containers:
  - image: httpd
    imagePullPolicy: Always
    name: pod2
