formation/04-secure-ingress/service1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: pod1
  name: service1
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: pod1
  type: ClusterIP
