formation/04-secure-ingress/service2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: pod2
  name: service2
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: pod2
  type: ClusterIP
